@@ -500,7 +500,7 @@ cdef object _unwrapXPathObject(xpath.xmlXPathObject* xpathObj,
         stringval = funicode(xpathObj.stringval)
         if smart_string:
             stringval = _elementStringResultFactory(
-                stringval, None, 0, 0)
+                stringval, None, None, 0)
         return stringval
     elif xpathObj.type == xpath.XPATH_POINT:
         raise NotImplementedError, u"XPATH_POINT"
@@ -588,9 +588,10 @@ cdef void _freeXPathObject(xpath.xmlXPathObject* xpathObj):
 
 cdef class _ElementUnicodeResult(python.unicode):
     cdef _Element _parent
-    cdef readonly object is_tail
-    cdef readonly object is_text
-    cdef readonly object is_attribute
+    cdef readonly bint is_tail
+    cdef readonly bint is_text
+    cdef readonly bint is_attribute
+    cdef readonly object attrname
 
     def getparent(self):
         return self._parent
@@ -602,9 +603,10 @@ class _ElementStringResult(str):
         return self._parent
 
 cdef object _elementStringResultFactory(string_value, _Element parent,
-                                        bint is_attribute, bint is_tail):
+                                        attrname, bint is_tail):
     cdef _ElementUnicodeResult uresult
     cdef bint is_text
+    cdef bint is_attribute = attrname is not None
     if parent is None:
         is_text = 0
     else:
@@ -616,6 +618,7 @@ cdef object _elementStringResultFactory(string_value, _Element parent,
         result.is_attribute = is_attribute
         result.is_tail = is_tail
         result.is_text = is_text
+        result.attrname = attrname
         return result
     else:
         uresult = _ElementUnicodeResult(string_value)
@@ -623,17 +626,19 @@ cdef object _elementStringResultFactory(string_value, _Element parent,
         uresult.is_attribute = is_attribute
         uresult.is_tail = is_tail
         uresult.is_text = is_text
+        uresult.attrname = attrname
         return uresult
 
 cdef object _buildElementStringResult(_Document doc, xmlNode* c_node,
                                       bint smart_string):
-    cdef _Element parent
+    cdef _Element parent = None
+    cdef object attrname = None
     cdef xmlNode* c_element
     cdef char* s
-    cdef bint is_attribute, is_text, is_tail
+    cdef bint is_tail
 
     if c_node.type == tree.XML_ATTRIBUTE_NODE:
-        is_attribute = 1
+        attrname = _namespacedName(c_node)
         is_tail = 0
         s = tree.xmlNodeGetContent(c_node)
         try:
@@ -643,7 +648,6 @@ cdef object _buildElementStringResult(_Document doc, xmlNode* c_node,
         c_element = NULL
     else:
         #assert c_node.type == tree.XML_TEXT_NODE, "invalid node type"
-        is_attribute = 0
         # may be tail text or normal text
         value = funicode(c_node.content)
         c_element = _previousElement(c_node)
@@ -662,7 +666,7 @@ cdef object _buildElementStringResult(_Document doc, xmlNode* c_node,
         parent = _fakeDocElementFactory(doc, c_element)
 
     return _elementStringResultFactory(
-        value, parent, is_attribute, is_tail)
+        value, parent, attrname, is_tail)
 
 
 ################################################################################
