@@ -8,6 +8,8 @@ lxml changelog
 Features added
 --------------
 
+* XPath attribute result strings have an ``attrname`` property.
+
 * Namespace URIs get validated against RFC 3986 at the API level
   (required by the XML namespace specification).
 
